fix: change padding bottom to improve ui spacing

--- a/src/app/payment-details-page/payment-details-page.css
+++ b/src/app/payment-details-page/payment-details-page.css
@@ -193,7 +193,7 @@ h1 span {
 }
 
 .detail-section--breakdown {
-  padding-bottom: 16px;
+  padding-bottom: 2px;
 }
 
 .section-heading {
